Add user permission admin APIs
